# dreader

./: pyproject.toml
dreader/: __init__.py  aws_utils.py  info.json  utils.py
