[tool.poetry]
name = "dreader"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
scanpy = "^1.10.2"
squidpy = "^1.6.0"
imageio = "^2.34.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
