[tool.poetry]
name = "dreader"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.4"
llvmlite = "0.43.0"
scanpy = "^1.10.2"
squidpy = "^1.2.2"
imageio = "^2.34.2"
boto3 = "1.34.155"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
